# salus-bridge

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.example.yml  compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: build-and-push.yml  ci.yml  release-please.yml
app/: __init__.py  main.py
